完整BFS寻路+绘制

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				margin-right: auto;
 				padding: 0 2em;
 			}
+
       </style>
   </head>
   <body>
@@ -126,6 +127,10 @@
             <button id="robot-run">Run Robot</button>
             <button id="map-run">Run Map</button>
             <button id="demo-run">Run Demo</button>
+            <button id="pf-hit-run">Run Pf Hit</button>
+            <input id="pf-hit-file" type="file">
+        </div>
+        <div id="draw_container">
         </div>
 
   </body>
